@@ -9,25 +9,23 @@ distinguished_name = req_dn
 x509_extensions = cert_type
 
 [ req_dn ]
-countryName = US
-countryName_default             = Country Name
+countryName = Country Name
+countryName_default             = US
 countryName_min                 = 2
 countryName_max                 = 2
 
-stateOrProvinceName             = City
-stateOrProvinceName_default     = City
+stateOrProvinceName             = State/Province
+stateOrProvinceName_default     = New York
 
 localityName                    = Locality Name (eg, city)
 
 0.organizationName              = Organization Name (eg, company)
-0.organizationName_default      = Organization Name (eg. company)
+0.organizationName_default      = IRC geeks
 
 organizationalUnitName          = Organizational Unit Name (eg, section)
-#organizationalUnitName_default =
+organizationalUnitName_default  = IRCd  
 
 0.commonName                    = Common Name (Full domain of your server)
-
-1.commonName                    = Common Name (default)
 1.commonName_value              = localhost
 
 [ cert_type ]
